--- a/package.json
+++ b/package.json
@@ -18,7 +18,10 @@
     "zod": "^3.25.76"
   },
   "devDependencies": {
+    "@eslint/js": "^9.36.0",
     "@types/node": "^24.6.2",
+    "@typescript-eslint/eslint-plugin": "^8.45.0",
+    "@typescript-eslint/parser": "^8.45.0",
     "ts-node": "^10.9.2",
     "typescript": "^5.9.3"
   }
