Summary: The changes successfully resolve the fs.Stats deprecation warning by replacing ts-node with tsx as the TypeScript runner.

--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "build": "tsc",
     "start": "node dist/index.js",
-    "dev": "node --loader ts-node/esm src/index.ts",
+    "dev": "tsx src/index.ts",
     "test": "echo \"Error: no test specified\" && exit 1",
     "inspector": "node scripts/simple-inspector-manager.js",
     "inspector:log": "node scripts/simple-inspector-manager.js --enable-logging",
@@ -28,6 +28,7 @@
     "@typescript-eslint/eslint-plugin": "^8.45.0",
     "@typescript-eslint/parser": "^8.45.0",
     "ts-node": "^10.9.2",
+    "tsx": "^4.20.6",
     "typescript": "^5.9.3"
   }
 }
